# WorkTimer

./: .dockerignore  .env  .env.template  .gitignore  DPG.py  DPG.pyw  DPG_Class.pyw  Dockerfile  INFO.md  LICENSE  Main.pyw  QUICKSTART.md  README.md  V2_READY.md  WorkTimer.pyw  backup_main.py  config_data.yml  config_devops_ui.yml  config_ui.yml  database.py  database_new.py  devops.py  devops_new.py  docker-compose.yml  generate_devops_contacts.py  globals.py  helpers.py  main.py  main.pyw  main_v2.py  pyproject.toml  todo.md
_Old/: Main.pyw
config/: config_data.yml  config_devops_ui.yml  config_notepad.yml.template  config_query.yml  config_settings.yml  config_tasks.yml  config_theme.yml.template  config_ui.yml  config_ui_styles.yml  devops_contacts.yml.template  devops_tags.yml.template  task_visuals.yml.template
docs/: CHANGELOG.md  DEVOPS_CONTACTS.md  DEVOPS_CONTACTS_README.md  DYNAMIC_WIDGETS.md  INFO.md  README.md  REFACTORING_GUIDE_V2.md  TASK_SCHEMA_PROPOSAL.md  TASK_VISUALS_README.md  UI_STYLING_REFACTOR.md  V2_PATTERNS_REFERENCE.md  todo.md
scripts/: generate_devops_contacts.py  generate_task_visuals.py  validate_devops_contacts.py  validate_schema.py
src/: __init__.py  config.py  database.py  devops.py  globals.py  helpers.py  main.py
src/core/: __init__.py  app.py  events.py
src/pages/: __init__.py  add_data.py  board.py  info.py  log.py  notepad.py  query_editor.py  root.py  settings.py  tasks.py  test_page.py  time_tracking.py
src/pages_v2/: __init__.py  add_data.py  info.py  log.py  query_editor.py  root.py  tasks.py  test_page.py  time_tracking.py
src/services/: __init__.py  services.py
src/ui/: __init__.py  add_data.py  app_layout.py  data_registry.py  database_tools.py  devops_forms.py  devops_handlers.py  (+10 more)
