[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worktimer"
version = "0.1.0"
authors = [
  { name = "Marcus Toftås", email = "mackan.toftas@live.com" }
]
maintainers = [
  { name = "Marcus Toftås", email = "mackan.toftas@live.com" }
]
description = "A helper program to keep time of time spent on different tasks, with built in DevOps integration."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-devops>=7.1.0b4",
    "msrest>=0.7.1",
    "nicegui>=2.24.1",
    "pandas>=2.3.2",
    "markdown>=3.4.4",
    "bleach>=6.0.0",
    "markdownify>=1.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MackanT/WorkTimer"
"Bug Tracker" = "https://github.com/MackanT/WorkTimer"

[project.scripts]
worktimer = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
